--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+.design-form {
+  width: 700px;
+}
+
+.btn-margin {
+  margin-top : 10px;
+}
+
+h1 {
+  font-size: 25px;
+  color: #EB4A5F;
+}
