--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,10 @@
-<h1>
-  <%= @task.name %> <%= @task.details %>
-</h1>
-
-<%= link_to "back", tasks_path %>
+<div class="container ">
+  <div class="row">
+    <div class="col-xs-6 col-xs-offset-3 box-shadow">
+      <h3 class = "text-center">
+        <%= @task.name.capitalize %>, Description : <i><%= @task.details %></i>
+      </h3>
+      <%= link_to "back", tasks_path, class: "btn btn-primary btn-large btn-block btn-margin"%>
+    </div>
+  </div>
+</div>
