--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -4,6 +4,6 @@
   <%= t.label :details %>
   <%= t.text_field :details, class: "form-control" %>
   <div class="text-center btn-margin">
-    <%= t.submit 'create', class: "btn btn-primary btn-large btn-block" %>
+    <%= t.submit 'GO !', class: "btn btn-primary btn-large btn-block" %>
   </div>
 <% end %>
